# simple-shooting-game

./: README.md
doc/: Doxyfile
src/: BigVirus.h  Bullet.h  CMakeLists.txt  Coord.h  Makefile  MySDL.h  Player.h  Unit.h  Utils.h  Virus.h  VirusGame.cpp  mainpage.h
